# askalono

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  justfile
.cargo/: config
.github/workflows/: build.yml  release.yml
cli/: Cargo.toml  build.rs  config.toml
cli/src/: cache.rs  cli.yml  commands.rs  crawl.rs  formats.rs  identify.rs  main.rs  util.rs
cli/tests/: cli.rs  integration_test.rs
datasets/: spdx-json  spdx-text
doc/: search-index.js
doc/askalono/: LicenseType.t.html  TextData.t.html  enum.LicenseType.html  index.html  sidebar-items.js  struct.Match.html  struct.Store.html  struct.TextData.html
doc/askalono/license/: enum.LicenseType.html  struct.TextData.html
doc/askalono/store/analyze/: struct.Match.html
doc/askalono/store/base/: struct.Store.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/convert/: trait.AsRef.js  trait.From.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/hash/: trait.Hash.js
doc/implementors/core/marker/: trait.Send.js  trait.Sync.js
doc/implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
doc/implementors/core/ops/drop/: trait.Drop.js
doc/quote/: index.html  macro.quote.html  struct.ByteStr.html  struct.Hex.html  struct.Ident.html  struct.Tokens.html  trait.ToTokens.html
doc/src/askalono/: lib.rs.html  license.rs.html  ngram.rs.html  preproc.rs.html
doc/src/askalono/store/: analyze.rs.html  base.rs.html  cache.rs.html  mod.rs.html  spdx.rs.html
doc/src/cfg_if/: lib.rs.html
doc/src/lazy_static/: lazy.rs.html  lib.rs.html
doc/src/memoffset/: lib.rs.html  offset_of.rs.html  span_of.rs.html
doc/src/nodrop/: lib.rs.html
doc/src/quote/: ident.rs.html  lib.rs.html  to_tokens.rs.html  tokens.rs.html
doc/src/scopeguard/: lib.rs.html
doc/src/unicode_xid/: lib.rs.html  tables.rs.html
examples/: annotate-text.rs  basic.rs
extras/lambda/: .gitignore  Cargo.toml  embedded-cache.bin.zstd
extras/lambda/src/: main.rs
extras/wasm/: .gitignore  Cargo.toml  README.md  build.rs
extras/wasm/demo/: index.html  index.js  package.json  webpack.config.js
extras/wasm/pkg/: Cargo.toml  build.rs  justfile
extras/wasm/src/: lib.rs
scripts/: update-docs
src/: lib.rs  license.rs  ngram.rs  preproc.rs  strategy.rs
src/store/: analyze.rs  base.rs  cache.rs  mod.rs  spdx.rs
tests/: integration_test.rs.disabled  introspection.rs  real_world.rs  self_test.rs  store_sanity.rs
tests/common/: mod.rs
tests/data/real-licenses/MIT/: rust_rand__0.98
wasm/: .gitignore  Cargo.toml  README.md  build.rs  demo.js  index.html  justfile  webpack.config.js
wasm-demo/: 0.demo.js  1.bundle.js  1.demo.js  bundle.js  demo.js  index.html
wasm/demo/: demo.js  index.html  package.json
wasm/pkg/: Cargo.toml  build.rs  justfile  package.json
wasm/pkg/src/: lib.rs
wasm/src/: lib.rs
