[package]
name = "askalono"
version = "0.3.0"
edition = "2018"
description = "a library to detect the contents of license files"
license = "Apache-2.0"
repository = "https://github.com/amzn/askalono"
authors = ["Jacob Peddicord <peddicor@amazon.com>"]
readme = "README.md"
exclude = [
    "/.github/**/*",
    "/datasets/**/*",
    "/scripts/**/*",
]

[dependencies]
failure = "0.1.5"
flate2 = { version = "1.0.7", features = ["rust_backend"], default_features = false }
lazy_static = "1.3.0"
log = "0.4.6"
regex = "1.1.2"
rmp-serde = "0.13.7"
serde = "1.0.89"
serde_derive = "1.0.89"
unicode-normalization = "0.1.8"

# spdx deps
serde_json = { version = "1.0.39", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.0.3"

[dev-dependencies]
env_logger = "0.6.1"

[lib]
name = "askalono"
path = "src/lib.rs"

[features]
default = ["spdx"]
spdx = ["serde_json"]
