[package]
name = "askalono"
version = "0.4.2"
edition = "2018"
description = "a library to detect the contents of license files"
license = "Apache-2.0"
repository = "https://github.com/amzn/askalono"
authors = ["Jacob Peddicord <peddicor@amazon.com>"]
readme = "README.md"
include = [
    "/Cargo.toml",
    "/examples/**/*",
    "/LICENSE",
    "/NOTICE",
    "/README.md",
    "/src/**/*",
]

[dependencies]
failure = "0.1.5"
lazy_static = "1.3.0"
log = "0.4.6"
regex = "1.1.7"
rmp-serde = "0.14.0"
serde = { version = "1.0.92", features = ["derive"] }
unicode-normalization = "0.1.8"

# spdx deps
serde_json = { version = "1.0.39", optional = true }

# gzip via flate2 is available via feature flag if you prefer that over
# zstd. it's also enabled for wasm32 builds, as zstd doesn't yet compile for
# that target. in order to build a gzip cache, you'll need the flag enabled
# on your build machine too.

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.2"
zstd = "0.5"
flate2 = { version = "1.0.14", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
flate2 = "1.0.14"

[dev-dependencies]
env_logger = "0.7"

[lib]
name = "askalono"
path = "src/lib.rs"

[features]
default = ["spdx"]
gzip = ["flate2"]
spdx = ["serde_json"]
