[package]
name = "askalono-cli"
version = "0.4.3"
edition = "2018"
description = "a tool to detect the contents of license files"
license = "Apache-2.0"
repository = "https://github.com/jpeddicord/askalono"
authors = ["Jacob Peddicord <jacob@peddicord.net>"]
readme = "README.md"
include = [
    "/build.rs",
    "/Cargo.*",
    "/embedded-cache.bin.zstd",
    "/LICENSE",
    "/NOTICE",
    "/README.md",
    "/src/**/*",
]

[dependencies]
askalono = { version = "0.4.3", path = "../" }
clap = "2.32.0"
env_logger = "0.7"
failure = "0.1.5"
ignore = "0.4.6"
log = "0.4.6"
rayon = "1.0.3"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
structopt = "0.2.15"

difference = { version = "2.0.0", optional = true }

[build-dependencies]
askalono = { version = "0.4.2", path = "../" }

[[bin]]
name = "askalono"
path = "src/main.rs"

[features]
default = ["embedded-cache"]
diagnostics = ["difference"]
embedded-cache = []
gzip = ["askalono/gzip"]