[package]
name = "askalono-cli"
version = "0.5.0"
edition = "2021"
description = "a tool to detect the contents of license files"
license = "Apache-2.0"
repository = "https://github.com/jpeddicord/askalono"
authors = ["Jacob Peddicord <jacob@peddicord.net>"]
readme = "README.md"
include = [
    "/build.rs",
    "/Cargo.*",
    "/embedded-cache.bin.zstd",
    "/LICENSE",
    "/NOTICE",
    "/README.md",
    "/src/**/*",
]

[dependencies]
askalono = { version = "0.5.0", path = "../" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
anyhow = "1.0.44"
ignore = "0.4.6"
log = "0.4.6"
rayon = "1.10.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.39"

difference = { version = "2.0.0", optional = true }

[build-dependencies]
askalono = { version = "0.5.0", path = "../" }

[[bin]]
name = "askalono"
path = "src/main.rs"

[features]
default = ["embedded-cache"]
diagnostics = ["difference"]
embedded-cache = []
gzip = ["askalono/gzip"]
