[package]
name = "askalono-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Jacob Peddicord <jacob@peddicord.net>"]
description = "a wasm library to detect the contents of license files"
repository = "https://github.com/jpeddicord/askalono"

[lib]
crate-type = ["cdylib"]

[dependencies]
askalono = { version = "*", path = "../../", features = ["gzip"], default-features = false }
js-sys = "0.3.39"
wasm-bindgen = "0.2.95"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[build-dependencies]
askalono = { version = "*", path = "../../", features = ["gzip"] }

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = "abort"
